# ACS-Gerardium_Rush-Genetic_Algorithm

./: .gitignore  CMakeLists.txt  Doxyfile  HyperPSearch.cpp  LICENSE  Post_processing.ipynb  Post_processing.py  Post_processing_code_only.py  README.md  environment.yml  main.cpp  requirements.txt
.github/workflows/: documentation.yml  run_tests.yml
docs/html/: CCircuit_8h_source.html  CSimulator_8h_source.html  CUnit_8h_source.html  Genetic__Algorithm_8h_source.html  annotated.html  classCCircuit-members.html  classCCircuit.html  classCUnit-members.html  classCUnit.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  structAlgorithm__Parameters-members.html  structAlgorithm__Parameters.html  structCircuit__Parameters-members.html  structCircuit__Parameters.html  structIndividual-members.html  structIndividual.html
include/: CCircuit.h  CSimulator.h  CUnit.h  Genetic_Algorithm.h  HyperPSearch.h
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  Genetic_Algorithm.cpp  HyperPSearch.cpp  main.cpp
tests/: CCircuit_Tests.cpp  CMakeLists.txt  CSimulator_Tests.cpp  CUnit_Tests.cpp  test1.cpp  test2.cpp  test_GA.cpp  test_validity.cpp
